Fix some auth login and possible hack with the file path.